--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
         "@clerk/nextjs": "^6.20.2",
         "@elastic/elasticsearch": "^8.18.2",
         "@mantine/hooks": "^8.0.1",
+        "@prisma/client": "^6.9.0",
         "@prisma/extension-accelerate": "^2.0.1",
         "@radix-ui/react-avatar": "^1.1.10",
         "@radix-ui/react-dialog": "^1.1.11",
@@ -50,7 +51,7 @@
         "@types/react-dom": "^19",
         "eslint": "^9",
         "eslint-config-next": "15.3.1",
-        "prisma": "^6.8.2",
+        "prisma": "^6.9.0",
         "tailwindcss": "^4",
         "tsx": "^4.19.4",
         "tw-animate-css": "^1.2.8",
